# fmi

./: .gitignore  .gitmodules  README.md  build.sh
boyer-moore/: CMakeLists.txt  boyer-moore.c  boyer-moore.h  test.c
heap/: CMakeLists.txt  heap.c  heap.h  test.c
hw1/: CMakeLists.txt  Makefile  README.md  cmd.cpp  cmd.hpp  compile-commands.json  error.hpp  main.cpp  oopcoin.cpp  oopcoin.hpp  solution.tex  task1.cpp  task2.cpp  task3.cpp
hw1/mystd/: CMakeLists.txt  README.md  exception.hpp  string.hpp  utilities.hpp  vector.hpp
hw1/src/expression-lib/: CMakeLists.txt  expression.cpp  expression.h  operations.cpp  operations.h  parser.cpp  parser.h  scoped_ptr.h  tokenizer.cpp  tokenizer.h
hw1/test/: CMakeLists.txt  test-expression.cpp  test_string.cpp  test_vector.cpp
hw2/: .clang-format  CMakeLists.txt  README.md  mystd.h  task1.cpp  task2.cpp  task3.cpp  task4.cpp
hw2/lib/include/libhw2/texts/: Periodical.h
hw2/lib/src/: Library.cpp
hw2/mystd/: CMakeLists.txt
hw2/mystd/include/mystd/: enable.h  string.h  utility.h
hw2/template/: CMakeLists.txt  build.sh
hw2/template/src/simulator-lib/: CMakeLists.txt  bar-simulator.cpp  bar33factorial.cpp  bar33factorial.h  student.h
hw2/template/src/simulator-lib/mystd/: find.h  list.h  list_iterator.h  stats_allocator.h
hw2/template/test/: CMakeLists.txt  test-list.cpp  test-simulation-additional.cpp  test-simulation.cpp
lib/: CMakeLists.txt
lib/include/libhw2/: Borrow.h  Common.h  Id.h  Library.h  User.h
lib/include/libhw2/builders/: BookBuilder.h  ComicsBuilder.h  PeriodicalBuilder.h  TextBuilder.h
lib/include/libhw2/tags/: AuthoredTextTag.h  LibraryTextTag.h  PeriodicalTextTag.h  TextTag.h
lib/include/libhw2/texts/: Book.h  Comics.h  Genre.h  Periodical.h  Text.h
lib/src/: Library.cpp  User.cpp
mystd/include/mystd/: map.h  string.h  unordered_map.h  vector.h
test1/: README.md  task1.cpp  task2.cpp  task3.cpp
test2/: CMakeLists.txt  mystd.h  task1.cpp  task2.cpp  task3.cpp
tests/: CMakeLists.txt  test_library.cpp  test_user.cpp
tests/mystd/: test_string.cpp  test_unordered_map.cpp  test_vector.cpp
